# LLMsFromScratch

./: DL_C1_Week2.ipynb  ExploringTorch.ipynb  PythonLangTests.ipynb  README.md  bigram.ipynb  main.py  names.txt  pyproject.toml
.ipynb_checkpoints/: DL_C1_Week2-checkpoint.ipynb  Untitled1-checkpoint.ipynb  bigram-checkpoint.ipynb
